fix: overflow on mobile

--- a/resources/scss/pages/_welcome-header.scss
+++ b/resources/scss/pages/_welcome-header.scss
@@ -5,6 +5,7 @@ Styles for the welcome page
 .welcome__header {
 	position: relative;
 	width: 100%;
+	overflow: hidden;
 }
 
 .welcome_hero {
